some temp changes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <tr>
 <td style="width:80%">  
 <h1 align="left"> <b> Janani Kalyanam </b> </h1> 
-<h2>  Graduate Student, University of California - San Diego</h2>
+<h2>  Postdoctoral Scholar, University of California - San Diego</h2>
+<h2>  Adjunct Faculty, University of San Diego</h2>
 <!--<h3> <a href="http://www.ece.ucsd.edu/">Electrical and Computer Engineering</a><br> <a href="http://www.ucsd.edu/"> University of California, San Diego (UCSD)</a></h3>
 Contact: <font face="courier new">j k a l y a n a &lt;at&gt; u c s d &lt;dot&gt; e d u</font><br>-->
-<a href="cv/resume.pdf">Resume</a> <br> <br>
 </td> 
 <td align="justify">
 <img src="pic.jpg" alt="Mountain View" style="width:150px;height:180px;">
